--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@pancakeswap-libs/sdk",
+  "name": "@pancakeswap-libs/test-sdk",
   "license": "MIT",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "🛠 An SDK for building applications on top of pancakeswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pancakeswap/pancakeswap-sdk.git",
+  "repository": "https://github.com/masato0616/pancakeswap-sdk.git",
   "keywords": [
     "pancakeswap",
     "ethereum"
