--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pancakeswap-libs/sdk",
+  "name": "pancakeswap-libs/sdk",
   "license": "MIT",
   "version": "1.0.2",
   "description": "🛠 An SDK for building applications on top of pancakeswap.",
